--- a/css/mouseFollow.css
+++ b/css/mouseFollow.css
@@ -1,11 +1,14 @@
 .mouse-follow {
   width: 100vw;
   height: 100vh;
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   pointer-events: none;
+  z-index: 100;
 }
 
 .mouse-follow-img {
@@ -14,4 +17,23 @@
   top: 0;
   left: 0;
   opacity: 0;
+}
+
+.line {
+  height: 100vh;
+  width: 0.7px;
+  background-color: #575757;
+  position: absolute;
+  transform: translate(-50%);
+  top: 0;
+}
+
+.background-color {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -10;
+  background-color: #f4f4f4;
 }
