--- a/css/slider.css
+++ b/css/slider.css
@@ -27,12 +27,13 @@
   transform: scale(1); /* 預設不放大 */
 }
 .carousel-item span {
-  width: 120%;
+  width: 100%;
   position: absolute;
   transition: all 0.5s ease; /* 或在 JS 控制也行 */
   top: 0;
   font-size: 16px;
   font-weight: 500;
+  text-align: center;
 }
 
 .carousel-item.active {
