--- a/css/homepage.css
+++ b/css/homepage.css
@@ -14,25 +14,33 @@ body {
   width: 100vw;
   height: 100vh;
   display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all 1s ease;
+  transform: translateY(0);
 }
 .homepage .left,
 .homepage .right {
   width: 50vw;
   height: 100vh;
   box-sizing: border-box;
+  transition: all 1s ease;
+  top: 0;
+  position: relative;
 }
 
 .homepage .left {
   padding: 0 4.3vw;
-  margin-top: 15vh;
+  margin-top: 18vh;
 }
 .homepage .left h2 {
-  font-size: 40px;
+  font-size: 2vw;
   font-weight: 300;
 }
 .homepage .left p {
   width: 100%;
-  font-size: 26px;
+  font-size: 1.3vw;
   font-weight: 300;
   margin-top: 25px;
 }
@@ -51,7 +59,7 @@ body {
 .homepage .left .source {
   width: 100%;
   margin-top: 20px;
-  font-size: 20px;
+  font-size: 1vw;
   font-weight: 300;
   display: flex;
   justify-content: space-between;
@@ -78,6 +86,7 @@ body {
   bottom: 3%;
   font-size: 18px;
   font-weight: 300;
+  transition: all 1s ease;
 }
 
 .status {
@@ -86,6 +95,7 @@ body {
   bottom: 3%;
   font-size: 18px;
   font-weight: 300;
+  transition: all 1s ease;
 }
 .status img {
   margin-left: 5px;
