--- a/css/mouseFollow.css
+++ b/css/mouseFollow.css
@@ -26,6 +26,17 @@
   position: absolute;
   transform: translate(-50%);
   top: 0;
+  transition: all 1s ease;
+}
+#line1 {
+  left: 25%;
+}
+#line2 {
+  left: 50%;
+  z-index: 11;
+}
+#line3 {
+  left: 75%;
 }
 
 .background-color {
