--- a/css/homepage.css
+++ b/css/homepage.css
@@ -17,7 +17,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  transition: all 1s ease;
+  /* transition: all 1s ease; */
   transform: translateY(0);
 }
 .homepage .left,
