--- a/css/slider.css
+++ b/css/slider.css
@@ -4,6 +4,7 @@
   transform: translate(-50%, -50%);
   top: 80%;
   left: 50%;
+  z-index: 2;
 }
 
 .slider {
@@ -11,11 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  top: 80%;
-  left: 50%;
-  z-index: 10;
+  position: relative;
   gap: 20px;
   transition: transform 0.5s ease;
   will-change: transform;
@@ -33,6 +30,7 @@
   width: 200px;
   transition: transform 0.5s ease;
   transform: scale(1);
+  position: relative;
 }
 .carousel-item span {
   width: 100%;
