--- a/css/homepage.css
+++ b/css/homepage.css
@@ -6,7 +6,8 @@
 body {
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
+  /* overflow-y: hidden; */
   font-family: Space Grotesk;
 }
 
@@ -18,6 +19,7 @@ body {
   top: 0;
   left: 0;
   /* transition: all 1s ease; */
+  overflow: hidden;
   transform: translateY(0);
 }
 .homepage .left,
