--- a/css/homepage.css
+++ b/css/homepage.css
@@ -7,7 +7,7 @@ body {
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
-  /* overflow-y: hidden; */
+  overflow-y: hidden;
   font-family: Space Grotesk;
 }
 
