--- a/css/slider.css
+++ b/css/slider.css
@@ -3,6 +3,7 @@
   width: 100vw;
   height: 100vh;
   transition: all 1s ease;
+  pointer-events: none;
 }
 
 .scroll {
@@ -44,6 +45,5 @@
   pointer-events: none;
   position: absolute;
   will-change: transform, opacity;
-  /* filter: blur(3px); */
   opacity: 0.4;
 }
